kubernetes/talos/apps/network/reverse-proxy/hass/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverse-proxy-homeassistant
  namespace: network
spec:
  ingressClassName: public
  rules:
    - host: &host homeassistant.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: reverse-proxy-homeassistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts: [*host]
      secretName: *host
